# fastapi-boilerplate

./: Dockerfile  README.md  pyproject.toml
src/: main.py  settings.py
src/auth/: current_user.py
src/auth/access/: service.py
src/auth/base/: router.py  schemas.py  service.py
src/users/user/: models.py  router.py  schemas.py  service.py
src/utils/: exceptions.py  schemas.py  single_psql_db.py
